# Aula20_bootcamp

./: README.md  pyproject.toml
backend/: crud.py  models.py  router.py  schemas.py
frontend/: app.py
