[tool.poetry]
name = "aula20-bootcamp"
version = "0.1.0"
description = ""
authors = ["Danie Marques de Almeida <danielmarques.enfermagem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
fastapi = "^0.112.0"
router = "^0.1"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
